--- a/sass/modules/_counter-area.scss
+++ b/sass/modules/_counter-area.scss
@@ -304,6 +304,7 @@
     display: flex;
     gap: 17px;
     align-items: center;
+    justify-content: center;
     position: relative;
     z-index: 10;
     @include sm {
